--- a/concourse/tasks/gpMgmt_check_gpdb.yml
+++ b/concourse/tasks/gpMgmt_check_gpdb.yml
@@ -4,7 +4,7 @@ image_resource:
 inputs:
   - name: gpdb_src
   - name: bin_gpdb
-  - name: sync_tools_gpdb_centos
+  - name: sync_tools_gpdb
 outputs:
 params:
   TEST_OS: ""
