--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -269,7 +269,8 @@ jobs:
       COVERITY_TOKEN: {{coverity_token}}
       COVERITY_EMAIL: {{coverity_email}}
 
-# Stage 2: Run regression tests (make installcheck-world)
+# Stage 2a: Run regression tests against binaries (make installcheck-world and similar)
+
 - name: icw_planner_centos6
   plan:
   - aggregate:
@@ -494,31 +495,77 @@ jobs:
       image: centos-gpdb-dev-6
       timeout: 3h
 
-# Stage 3: Packaging
+- name: QP_memory-accounting
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_centos6]
+      trigger: true
+    - get: bin_gpdb
+      passed: [compile_gpdb_centos6]
+      resource: bin_gpdb_centos6
+    - get: centos-gpdb-dev-6
+  - task: memory-accounting
+    timeout: 3h
+    file: gpdb_src/concourse/tasks/tinc_gpdb.yml
+    image: centos-gpdb-dev-6
+    params:
+      MAKE_TEST_COMMAND: memory_accounting
+      BLDWRAP_POSTGRES_CONF_ADDONS: ""
+      TEST_OS: "centos"
+
+- name: QP_runaway-query
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_centos6]
+      trigger: true
+    - get: bin_gpdb
+      passed: [compile_gpdb_centos6]
+      resource: bin_gpdb_centos6
+    - get: centos-gpdb-dev-6
+  - task: runaway-query
+    timeout: 3h
+    file: gpdb_src/concourse/tasks/tinc_gpdb.yml
+    image: centos-gpdb-dev-6
+    params:
+      MAKE_TEST_COMMAND: runaway_query
+      BLDWRAP_POSTGRES_CONF_ADDONS: ""
+      TEST_OS: "centos"
+
+- name: regression_tests_gphdfs_centos
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_centos6]
+      trigger: true
+    - get: bin_gpdb
+      passed: [compile_gpdb_centos6]
+      resource: bin_gpdb_centos6
+    - get: centos-gpdb-dev-6
+  - task: regression_tests_gphdfs
+    file: gpdb_src/concourse/tasks/regression_tests_gphdfs.yml
+    image: centos-gpdb-dev-6
+    params:
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 6
+
+# Stage 2b: Packaging
 
 - name: gpdb_rc_packaging_centos
   plan:
   - aggregate:
     - get: gpdb_src
       passed:
-      - icw_planner_centos6
-      - icw_gporca_centos6
-      - icw_gporca_centos7
-      - icw_planner_codegen_centos6
-      - icw_gporca_codegen_centos6
-      - MU_check_centos
+      - compile_gpdb_centos6
+      - compile_gpdb_centos7
     - get: gpaddon_src
+      passed: [compile_gpdb_centos6]
     - get: bin_gpdb_centos6
-      passed:
-      - icw_planner_centos6
-      - icw_gporca_centos6
-      - icw_planner_codegen_centos6
-      - icw_gporca_codegen_centos6
-      - MU_check_centos
+      passed: [compile_gpdb_centos6]
       trigger: true
     - get: bin_gpdb_centos7
-      passed:
-      - icw_gporca_centos7
+      passed: [compile_gpdb_centos7]
       trigger: true
     - get: centos-gpdb-dev-6
     - get: centos-gpdb-dev-7
@@ -649,11 +696,11 @@ jobs:
       params:
         file: packaged_gpdb_src_behave/greenplum-db-4.3.99.0-behave.tar.gz
 
-# Stage 4: Trigger and monitor pulse project
+# Stage 3: Trigger jobs that rely on packaging
 
 - name: MU_netbackup76
   plan:
-  - aggregate: &pulse_trigger_resource
+  - aggregate: &post_packaging_gets_trigger_true
     - get: gpdb_src
       params: {submodules: none}
       tags: ["gpdb5-pulse-worker"]
@@ -691,7 +738,7 @@ jobs:
 
 - name: MU_backup-restore
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -708,7 +755,7 @@ jobs:
 
 - name: MU_gpcheckcat
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -725,7 +772,7 @@ jobs:
 
 - name: MU_gprecoverseg
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -742,7 +789,7 @@ jobs:
 
 - name: MU_kerberos-smoke
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -759,7 +806,7 @@ jobs:
 
 - name: MU_gpexpand
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -776,7 +823,7 @@ jobs:
 
 - name: MU_gptransfer-43x-to-5x
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -793,7 +840,7 @@ jobs:
 
 - name: MU_gptransfer-5x-to-5x
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -811,7 +858,7 @@ jobs:
 
 - name: cs-pg-two-phase
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -828,7 +875,7 @@ jobs:
 
 - name: cs-walrepl-multinode
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -883,7 +930,7 @@ jobs:
 
 - name: mpp_interconnect
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -900,7 +947,7 @@ jobs:
 
 - name: unite_ccle_gpdb5
   plan:
-  - aggregate: *pulse_trigger_resource
+  - aggregate: *post_packaging_gets_trigger_true
   - task: trigger_pulse
     tags: ["gpdb5-pulse-worker"]
     file: gpdb_src/ci/pulse/api/trigger_pulse.yml
@@ -914,58 +961,3 @@ jobs:
     params:
       <<: *pulse_properties
       PULSE_PROJECT_NAME: "GPDB-5-CCLE"
-
-- name: QP_memory-accounting
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed: [compile_gpdb_centos6]
-      trigger: true
-    - get: bin_gpdb
-      passed: [compile_gpdb_centos6]
-      resource: bin_gpdb_centos6
-    - get: centos-gpdb-dev-6
-  - task: memory-accounting
-    timeout: 3h
-    file: gpdb_src/concourse/tasks/tinc_gpdb.yml
-    image: centos-gpdb-dev-6
-    params:
-      MAKE_TEST_COMMAND: memory_accounting
-      BLDWRAP_POSTGRES_CONF_ADDONS: ""
-      TEST_OS: "centos"
-
-- name: QP_runaway-query
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed: [compile_gpdb_centos6]
-      trigger: true
-    - get: bin_gpdb
-      passed: [compile_gpdb_centos6]
-      resource: bin_gpdb_centos6
-    - get: centos-gpdb-dev-6
-  - task: runaway-query
-    timeout: 3h
-    file: gpdb_src/concourse/tasks/tinc_gpdb.yml
-    image: centos-gpdb-dev-6
-    params:
-      MAKE_TEST_COMMAND: runaway_query
-      BLDWRAP_POSTGRES_CONF_ADDONS: ""
-      TEST_OS: "centos"
-
-- name: regression_tests_gphdfs_centos
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed: [gpdb_rc_packaging_centos]
-      trigger: true
-    - get: bin_gpdb
-      passed: [gpdb_rc_packaging_centos]
-      resource: bin_gpdb_centos6
-    - get: centos-gpdb-dev-6
-  - task: regression_tests_gphdfs
-    file: gpdb_src/concourse/tasks/regression_tests_gphdfs.yml
-    image: centos-gpdb-dev-6
-    params:
-      TARGET_OS: centos
-      TARGET_OS_VERSION: 6
