Enable dblink in GPDB
dblink is a bulit-in module of postgresql, this patch enable it in GPDB.

1. Enable compiling dblink with GPDB
2. Update and enable dblink test cases

Known issue:

1. The following functions are not supported by GPDB and disabled temporarily
   due to GPDB behavior changed.
   dblink_send_query()
   dblink_is_busy()
   dblink_get_result()

2. Anonymous connection and connection by name are not supported in a nested statement with
   both write and read. E.g.
   INSERT INTO tblname SELECT * FROM dblink(['connName'],'SELECT * FROM otherdb.tblname') as tbl;
   Currently, only connection with connection string is supported in such statements.

Signed-off-by: Peifeng Qiu <pqiu@pivotal.io>
Signed-off-by: Yuan Zhao <yuzhao@pivotal.io>
Signed-off-by: Jianxia Chen <jchen@pivotal.io>

--- a/contrib/dblink/Makefile
+++ b/contrib/dblink/Makefile
@@ -20,3 +20,9 @@ top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
 endif
+
+
+installcheck:
+	-$(top_builddir)/src/test/regress/pg_regress --psqldir=$$GPHOME/bin/ --init-file=$(top_builddir)/src/test/regress/init_file --dbname=contrib_regression dblink
+
+.PHONY: installcheck
