Compile pg_dump objects locally for cdb_dump
The cdb_dump/restore tools are linking some of the pg_dump objects
for common code. When building, and linking, the shared objects into
pg_dump folder however there is a race condition in parallel builds
where an object compiled in pg_dump can be overwritten by the same
object compiled from pg_dump/cdb while being read by the linker in
pg_dump. While rare, an error in the CI pipeline indicates that this
might have caused a compilation failure. Fix by symlinking the shared
code into pg_dump/cdb to create a local copy.

While there, did some general tidying up: break a few long lines into
more readable chunks; make use of the $^ make variable to reference
objects from the target definition; set the $(X) extension properly;
ensure that all generated files are removed on make clean; use the
variables rather than hardcoding paths; remove references to objects
that no longer exists.

--- a/src/bin/pg_dump/Makefile
+++ b/src/bin/pg_dump/Makefile
@@ -44,7 +44,7 @@ pg_restore: pg_restore.o $(OBJS) $(KEYWRDOBJS) $(libpq_builddir)/libpq.a
 pg_dumpall: pg_dumpall.o dumputils.o binary_upgradeall.o $(KEYWRDOBJS) $(libpq_builddir)/libpq.a
 	$(CC) $(CFLAGS) pg_dumpall.o dumputils.o binary_upgradeall.o $(KEYWRDOBJS) $(WIN32RES) $(libpq_pgport) $(LDFLAGS) $(LIBS) -o $@$(X)
 
-submake-cdb: $(KEYWORDOBJS) $(OBJS)
+submake-cdb:
 	$(MAKE) -C cdb all
 
 install: all installdirs
