--- a/contrib/dblink/Makefile
+++ b/contrib/dblink/Makefile
@@ -8,7 +8,7 @@ SHLIB_LINK = $(libpq)
 DATA_built = dblink.sql 
 DATA = uninstall_dblink.sql 
 REGRESS = dblink
-
+REGRESS_OPTS = --init-file=$(top_builddir)/src/test/regress/init_file --dbname=contrib_regression
 
 ifdef USE_PGXS
 PG_CONFIG = pg_config
@@ -21,8 +21,9 @@ include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
 endif
 
+installcheck: prepare_dblink_sql
 
-installcheck:
-	-$(top_builddir)/src/test/regress/pg_regress --psqldir=$$GPHOME/bin/ --init-file=$(top_builddir)/src/test/regress/init_file --dbname=contrib_regression dblink
+prepare_dblink_sql:
+	cp $(GPHOME)/share/postgresql/contrib/dblink.sql ./dblink.sql
 
-.PHONY: installcheck
+.PHONY: prepare_dblink_sql
